# aTerm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  installer.iss  resources.qrc
include/: atermwindow.hpp  config.hpp  machineinfo.hpp  machinetype.hpp  protocol.hpp  protocolparser.hpp  serialdialog.hpp  serialmanager.hpp  splashresources.hpp  terminalbuffer.hpp  terminalview.hpp  theme.hpp  version.hpp
scripts/: build.bat  clean.bat  configure.bat  run.bat
src/: atermwindow.cpp  machineinfo.cpp  main.cpp  protocolparser.cpp  serialdialog.cpp  serialmanager.cpp  splashresources.cpp  terminalbuffer.cpp  terminalview.cpp
